sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/BSF_Population_Maintenance__c.object-meta.xml
<CustomObject>
    <label>BSF Population Maintenance</label>
    <nameField>
        <label>BSF Population Maintenance Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>BSF Population Maintenances</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>