sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Cage_No__c.field-meta.xml
<CustomField>
    <fullName>Cage_No__c</fullName>
    <label>Cage No.</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>