sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Eggs_Collected__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Collected__c</fullName>
    <label>Eggs Collected (Y/N)</label>
    <length>1</length>
    <type>Text</type>
</CustomField>