sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Eggs_Weight__c.field-meta.xml
<CustomField>
    <fullName>Eggs_Weight__c</fullName>
    <formula>Weight_of_the_pipe_Eggs__c -  Weight_of_the_pipe__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Eggs Weight</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>