sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Input_Date__c.field-meta.xml
<CustomField>
    <fullName>Input_Date__c</fullName>
    <label>Input Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>