sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Instar_Larvae_send_to_Waste_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Instar_Larvae_send_to_Waste_Conversion__c</fullName>
    <label>Instar-Larvae send to Waste Conversion</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>