sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Instar_Larvae_to_Population_maintenance__c.field-meta.xml
<CustomField>
    <fullName>Instar_Larvae_to_Population_maintenance__c</fullName>
    <label>Instar-Larvae to Population maintenance</label>
    <precision>14</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>