sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Instar_Larvae_to_Waste_Conversion_Date__c.field-meta.xml
<CustomField>
    <fullName>Instar_Larvae_to_Waste_Conversion_Date__c</fullName>
    <label>Instar-Larvae to Waste Conversion Date</label>
    <type>Date</type>
</CustomField>