sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Mature_Larvae_KG__c.field-meta.xml
<CustomField>
    <fullName>Mature_Larvae_KG__c</fullName>
    <label>Mature Larvae (KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>