sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Output_Date__c.field-meta.xml
<CustomField>
    <fullName>Output_Date__c</fullName>
    <label>Output Date</label>
    <type>Date</type>
</CustomField>