sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Pipe_identity__c.field-meta.xml
<CustomField>
    <fullName>Pipe_identity__c</fullName>
    <label>Pipe identity</label>
    <length>5</length>
    <type>Text</type>
</CustomField>