sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Pre_Pupae_KG__c.field-meta.xml
<CustomField>
    <fullName>Pre_Pupae_KG__c</fullName>
    <label>Pre-Pupae(KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>