sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Pupae_KG__c.field-meta.xml
<CustomField>
    <fullName>Pupae_KG__c</fullName>
    <label>Pupae (KG)</label>
    <precision>8</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>