sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Residue__c.field-meta.xml
<CustomField>
    <fullName>Residue__c</fullName>
    <label>Residue(KG)</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>