sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Substrate_Type__c.field-meta.xml
<CustomField>
    <fullName>Substrate_Type__c</fullName>
    <label>Substrate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Potatoes</fullName>
            </value>
            <value>
                <fullName>Market waste</fullName>
            </value>
            <value>
                <fullName>Carrots</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>