sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Substrate_Weight__c.field-meta.xml
<CustomField>
    <fullName>Substrate_Weight__c</fullName>
    <label>Substrate Weight</label>
    <precision>7</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>