sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Total_Instar_Larvae_KG__c.field-meta.xml
<CustomField>
    <fullName>Total_Instar_Larvae_KG__c</fullName>
    <formula>Instar_Larvae_send_to_Waste_Conversion__c +  Instar_Larvae_to_Population_maintenance__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Instar-Larvae (KG)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>