sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/fields/Weight_of_the_pipe_Eggs__c.field-meta.xml
<CustomField>
    <fullName>Weight_of_the_pipe_Eggs__c</fullName>
    <label>Weight of the pipe + Eggs</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>