sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Crawl_Off.recordType-meta.xml
<RecordType>
    <fullName>Crawl_Off</fullName>
    <active>true</active>
    <label>Crawl - Off</label>
</RecordType>