sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Crawl_Off_Input.recordType-meta.xml
<RecordType>
    <fullName>Crawl_Off_Input</fullName>
    <active>true</active>
    <label>Crawl - Off Input</label>
</RecordType>