sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Crawl_Off_Output.recordType-meta.xml
<RecordType>
    <fullName>Crawl_Off_Output</fullName>
    <active>true</active>
    <label>Crawl - Off Output</label>
</RecordType>