sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Larvae_Production.recordType-meta.xml
<RecordType>
    <fullName>Larvae_Production</fullName>
    <active>true</active>
    <label>Larvae Production</label>
</RecordType>