sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Larvae_Production_Input.recordType-meta.xml
<RecordType>
    <fullName>Larvae_Production_Input</fullName>
    <active>true</active>
    <label>Larvae Production Input</label>
</RecordType>