sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Larvae_Production_Output.recordType-meta.xml
<RecordType>
    <fullName>Larvae_Production_Output</fullName>
    <active>true</active>
    <label>Larvae Production Output</label>
</RecordType>