sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Nursery.recordType-meta.xml
<RecordType>
    <fullName>Nursery</fullName>
    <active>true</active>
    <label>Nursery</label>
</RecordType>