sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Nursery_Input.recordType-meta.xml
<RecordType>
    <fullName>Nursery_Input</fullName>
    <active>true</active>
    <label>Nursery Input</label>
</RecordType>