sfSandBoxCode/force-app/main/default/objects/BSF_Population_Maintenance__c/recordTypes/Nursery_Output.recordType-meta.xml
<RecordType>
    <fullName>Nursery_Output</fullName>
    <active>true</active>
    <label>Nursery Output</label>
</RecordType>